# vitara-analysis

./: .gitignore  Taskfile.yml  analyze.ipynb  config.yml  pyproject.toml
vitara/io/: config.py  read_file.py
vitara/processing/: conversion.py  trial.py
