[tool.poetry]
name = "vitara"
version = "0.1.0"
description = ""
authors = ["Andrew Li <andrewli@u.northwestern.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
polars = "^1.14.0"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
pyyml = "^0.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^24.10.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
